--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-	font-family: "PT Sans", "Arial", sans serif;
+	font-family: "PT Sans", "Arial", sans-serif;
 }
 
 
@@ -19,7 +19,7 @@ body {
 
 .advantages h1 {
 	font-size: 21px;
-	line-height:;
+	line-height: 26px;
 	color: #000000;
 	font-weight: bold;
 }
@@ -60,11 +60,8 @@ body {
 	color: #83b4d3;
 }
 
-.arrows {
-	display: inline;
-}
-
-ul.stars li {
-	display: inline;
+.stars {
+	display: flex;
 	color: #81b3d2;
+	list-style: none;
 }
