--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 body {
 	margin: 0;
 	padding: 0;
-	font-family: "ptsans", "Arial", sans-serif;
+	font-family: "PT Sans", "Arial", sans-serif;
 	text-transform: uppercase;
 }
 
 @font-face {
-    font-family: "ptsans"; 
+    font-family: "PT Sans"; 
     src: url("fonts/ptsans.woff") format("woff"),
 	url("fonts/ptsans.woff2") format("woff2");
     font-weight: normal;
@@ -14,7 +14,7 @@ body {
    }
 
 @font-face {
-    font-family: "ptsans"; 
+    font-family: "PT Sans"; 
     src: url("fonts/ptsansbold.woff") format("woff"),
     url("fonts/ptsansbold.woff2") format("woff2");
     font-weight: bold;
@@ -24,7 +24,6 @@ body {
 .intro {
  	height: 508px;
  	width: 1200px;
-	background-color: #ffffff;
  	background-image: url("../img/background.jpg");
  	background-position: top center;
   	background-repeat: no-repeat;
